[gd_scene load_steps=3 format=3 uid="uid://saveload_menu"]

[ext_resource type="Script" path="res://SaveLoadMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SaveLoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "СОХРАНЕНИЕ"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Slot1" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 1"

[node name="Slot2" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 2"

[node name="Slot3" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 3"

[node name="Slot4" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 4"

[node name="Slot5" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 5"

[node name="Slot6" type="Button" parent="Panel/GridContainer"]
custom_minimum_size = Vector2(340, 100)
layout_mode = 2
text = "Слот 6"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
text = "ЗАКРЫТЬ"

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_pressed"]
